<resources>
    <string name="app_name">Pembaca Meter</string>
    <string name="todo">TODO</string>
    <string name="kamis_24_oktober_2019">Kamis, 24 Oktober 2019</string>
    <string name="inisial">Inisial</string>
    <string name="ini">INI</string>
    <string name="hari">Hari</string>
    <string name="_14">14</string>
    <string name="jumlah">Jumlah</string>
    <string name="_276">276</string>
    <string name="dibaca">Dibaca</string>
    <string name="upload">Upload</string>
    <string name="_149">149</string>
    <string name="sisa">Sisa</string>
    <string name="_43">43</string>
    <string name="aplikasi">APLIKASI</string>
    <string name="pembaca_meter">PEMBACA METER</string>
    <string name="ujang_ismat">UJANG ISMAT</string>
    <string name="nomor_pelanggan">Input Nomor Pelanggan</string>
    <string name="masukkan_nomor_pelanggan_atau_nomor_meter">Masukkan nomor pelanggan atau nomor meter</string>
    <string name="list_pelanggan">Daftar Pelanggan</string>
    <string name="buka_data_pelanggan_dari_list_order_hari_ini">Buka data pelanggan dari list order hari ini</string>
    <string name="peta_pelanggan">Peta Lokasi Pelanggan</string>
    <string name="buka_data_pelanggan_menggunakan_peta">Buka data pelanggan menggunakan peta</string>
    <string name="upload_pelanggan">Upload Hasil Pembacaan</string>
    <string name="upload_data_hasil_pembacaan_ke_server">Upload data hasil pembacaan ke server</string>
    <string name="_15801499">15801499</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="clear">Clear</string>
    <string name="_0">0</string>
    <string name="back">Back</string>
    <string name="no_meter">NO METER</string>
    <string name="no_pelgn">NO PELGN</string>
    <string name="logout">Logout</string>
    <string name="batal">Batal</string>
    <string name="logout_dari_aplikasi">Logout dari aplikasi?</string>
    <string name="login">LOGIN</string>
    <string name="connected"><![CDATA[< Connected >]]></string>
    <string name="api_server">API Server:</string>
    <string name="http_server_port">http://server:port</string>
    <string name="simpan">Simpan</string>
    <string name="masih_ada_data_yang_belum_diupload_silahkan_upload_dengan_menggunakan_menu_upload_atau_pilih_reset_untuk_mengganti_dengan_data_yang_baru">Masih ada data yang belum selesai. Pastikan data telah terbaca, dan hasil bacaan telah ter-upload semua. Jika tetap ingin melakukan RESET data, silahkan gunakan tombol RESET\n</string>
    <string name="reset">Reset</string>
    <string name="ganti_foto_rumah">Ganti foto rumah</string>
    <string name="nomor_pelanggan_">No Pelanggan:</string>
    <string name="no_meter_">No. Meter:</string>
    <string name="r1">R1</string>
    <string name="_00000000">00000000</string>
    <string name="nama">Nama:</string>
    <string name="alamat">Alamat:</string>
    <string name="golongan_tarif">Golongan Tarif</string>
    <string name="telepon">Telepon:</string>
    <string name="gol_tarif">Gol. Tarif:</string>
    <string name="lanjut_baca_meter">BACA METER</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="capture">PHOTO</string>
    <string name="simpan_dan_upload">Simpan dan Upload</string>
    <string name="stand">Stand:</string>
    <string name="catatan">Catatan:</string>
    <string name="keterangan">Keterangan:</string>
    <string name="update_koordinat">Koordinat Peta</string>
    <string name="history_bacaan">History Bacaan</string>
    <string name="tambah_no_telepon">Tambah No. Telepon</string>
    <string name="ganti_photo_rumah">Ganti Photo Rumah?</string>
    <string name="ya_lanjutkan">Ya, Lanjutkan</string>
    <string name="data_berhasil_disimpan_di_device_tetapi_proses_upload_ke_server_gagal_apakah_ingin_mencoba_upload_lagi_atau_nanti_saja_melalui_menu_upload_data">Data berhasil disimpan di device, tetapi proses UPLOAD ke server gagal. Apakah ingin mencoba upload lagi? Atau nanti saja melalui menu Upload Data?\n</string>
    <string name="nanti_saja">Nanti Saja</string>
    <string name="coba_lagi">Coba Lagi?</string>
    <string name="cari_hint">Cari Nomor pelanggan / Nama / Alamat</string>
    <string name="title_activity_by_maps">Search By Maps</string>
    <string name="reset_data">Reset Data?</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="upload_semua">Upload Semua</string>
    <string name="jumlah_data_0">Jumlah data: 0</string>
    <string name="upload_data_update">Upload Data Update</string>
    <string name="upload_data_hasil_update_lapangan">Upload data hasil update lapangan</string>
</resources>
