<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="10dp"
            android:text="@string/reset_data"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btnResetData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:elevation="5dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textSize="25sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            android:text="@string/logout_dari_aplikasi"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#036EBE"
            android:elevation="5dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

    </TableRow>

</TableLayout>