<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootKeyboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#197FCF"
    tools:context=".ByNopel">

    <LinearLayout
        android:id="@+id/layoutTopKeyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="#48000000"
            android:fontFamily="sans-serif-condensed"
            android:maxLength="15"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardKeyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        app:cardBackgroundColor="#197FCF"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutBottomKeyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTopKeyboard">

        <LinearLayout
            android:id="@+id/layoutButWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutBut1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/keyButton1"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_1"
                    android:textColor="#B7FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/keyButton2"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:background="#ADFFFFFF"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_2"
                    android:textColor="#B7FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/keyButton3"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:background="#ADFFFFFF"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_3"
                    android:textColor="#B7FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBut2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/keyButton4"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:background="#ADFFFFFF"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_4"
                    android:textColor="#B7FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/keyButton5"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:background="#ADFFFFFF"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_5"
                    android:textColor="#B7FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/keyButton6"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:background="#ADFFFFFF"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_6"
                    android:textColor="#B7FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBut3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/keyButton7"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_7"
                    android:textColor="#B7FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/keyButton8"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_8"
                    android:textColor="#B7FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/keyButton9"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:background="#ADFFFFFF"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_9"
                    android:textColor="#B7FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBut4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/keyButtonClear"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:background="#ADFFFFFF"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/clear"
                    android:textColor="#B7FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/keyButton0"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:background="#ADFFFFFF"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/_0"
                    android:textColor="#B7FFFFFF"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/keyButtonBack"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:background="#ADFFFFFF"
                    android:backgroundTint="#197FCF"
                    android:fontFamily="sans-serif-condensed"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/back"
                    android:textColor="#B7FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layoutBottomKeyboard"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnNoMeter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#2196F3"
            android:contentDescription="@string/todo"
            android:drawableLeft="@drawable/icon_meter_white_small"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/no_meter"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/btnNoPelanggan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#2196F3"
            android:contentDescription="@string/todo"
            android:drawableEnd="@drawable/icon_customer_white_samll"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/no_pelgn"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>